[package]
name = "keysight-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
eframe = "0.31.1"
egui_plot = "0.31.0"

rand = { version = "0.9.0", optional = true }


[features]
virtual =  ["rand"]
